--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									<a href="#" class="learn-more">Learn More <i class="flaticon-right-thin"></i></a>
 								</div> <!-- /.text -->
 							</div> <!-- /.col- -->
-							<div class="col-lg-6 order-lg-first img-box"><div><img src="images/shape/1.1.png" alt=""></div></div>
+							<div class="col-lg-6 order-lg-first img-box img-box-motion"><div><img src="images/shape/1.1.png" alt=""></div></div>
 						</div> <!-- /.row -->
 
 						<div class="row single-block margin-30">
@@ -166,7 +166,7 @@
 									<a href="#" class="learn-more">Learn More <i class="flaticon-right-thin"></i></a>
 								</div> <!-- /.text -->
 							</div> <!-- /.col- -->
-							<div class="col-lg-6 order-lg-first img-box"><div><img src="images/shape/1.1.png" alt=""></div></div>
+							<div class="col-lg-6 order-lg-first img-box"><div><img src="images/shape/2a.png" alt=""></div></div>
 						</div> <!-- /.row -->
 
 						<div class="row single-block margin-30">
@@ -178,7 +178,7 @@
 									<a href="#" class="learn-more">Learn More <i class="flaticon-right-thin"></i></a>
 								</div> <!-- /.text -->
 							</div> <!-- /.col- -->
-							<div class="col-lg-6 img-box"><div><img src="images/shape/2.png" alt=""></div></div>
+							<div class="col-lg-6 img-box"><div><img src="images/shape/2a.png" alt=""></div></div>
 						</div> <!-- /.row -->
 
 						<div class="row single-block margin-30">
@@ -190,7 +190,7 @@
 									<a href="#" class="learn-more">Learn More <i class="flaticon-right-thin"></i></a>
 								</div> <!-- /.text -->
 							</div> <!-- /.col- -->
-							<div class="col-lg-6 order-lg-first img-box"><div><img src="images/shape/1.1.png" alt=""></div></div>
+							<div class="col-lg-6 order-lg-first img-box"><div><img src="images/shape/2b.png" alt=""></div></div>
 						</div> <!-- /.row -->
 					</div> <!-- /.container -->
 				</div> <!-- /.our-feature-two -->
@@ -203,39 +203,48 @@
 					Our Feature
 				=====================================================
 				-->
-				<div class="our-features-one" id="features">
+				<div class="our-features-one" id="services">
 					<div class="container">
 						<div class="theme-title">
-							<h2>The Largest & Best <span>Digital Currency</span> <br>for Your Future money</h2>
+							<h2>Setting new standards for <span>DAO</span> </h2>
 						</div>
 						
 
 						<div class="row">
 							<div class="col-md-4 col-xs-12">
 								<div class="single-feature">
-									<div class="icon-box">
-										<img src="images/icon/5.png" alt="" class="primary-icon">
-									</div>
-									<h3>cryto Is Untraceable</h3>
-									<p>Sending and receiving addresses as well as transacted amounts.</p>
+									<p><span class="numbers">1.</span> All spending will be voted on by the DAO and every PHNX spent posted on our running budget page. 
+									</p>
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 							<div class="col-md-4 col-xs-12">
 								<div class="single-feature border-fix">
-									<div class="icon-box">
-										<img src="images/icon/6.png" alt="" class="primary-icon">
-									</div>
-									<h3>Autonomy self-rule.</h3>
-									<p>cryto has striven to solve blockchain governance, transparency brings </p>
+									<p><span class="numbers">2.</span> The Phoenix DAO does not rely on donations; it is self sustaining through the Phoenix dApp Store.
+									</p>
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 							<div class="col-md-4 col-xs-12">
 								<div class="single-feature">
-									<div class="icon-box">
-										<img src="images/icon/7.png" alt="" class="primary-icon">
-									</div>
-									<h3>Transparency & Stability</h3>
-									<p>In crypto, transparency brings trust & old strong transparency</p>
+									<p><span class="numbers">3.</span> By participating in governance, you can earn PHNX, ETH, and even DAI.
+									</p>
+								</div> <!-- /.single-feature -->
+							</div> <!-- /.col- -->
+							<div class="col-md-6 col-xs-12">
+								<div class="single-feature">
+									<p><span class="numbers">4.</span> Open framework for participation, and enables anyone around the globe to push the ecosystem forward.
+									</p>
+								</div> <!-- /.single-feature -->
+							</div> <!-- /.col- -->
+							<div class="col-md-6 col-xs-12">
+								<div class="single-feature">
+									<p><span class="numbers">5.</span> By staking your PHNX into the contracts, you are able to earn rewards.
+									</p>
+								</div> <!-- /.single-feature -->
+							</div> <!-- /.col- -->
+							<div class="col-md-12 col-xs-12">
+								<div class="single-feature">
+									<p>Learn more about what makes our DAO unique <a href="#" class="here">here</a> 
+									</p>
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 						</div> <!-- /.row -->
