--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 									<div class="text">
 										<h3 class="name">Awosika Ayodeji</h3>
 										<span>Global Initiative Director</span>
-										<p>“Success is making our clients succeed. Nothing else matters how we work.”</p>
+										<p>Awosika is a project developer and organiser, he forsees the foundation's initiatives and management</p>
 										<ul>
 											<li>
 												<a href="" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
