--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 										<p>Fahad is the Director of Blockchain. He is charged with the aim of integrating dApp Developers annd building the DAO's blockchain community devs.</p>
 										<ul>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
+												<a href="https://www.linkedin.com/in/syedfahadhussain" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
 											</li>
 											<li>
 												<a href="" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
