--- a/index.html
+++ b/index.html
@@ -619,10 +619,10 @@
 												<a href="https://www.linkedin.com/in/syedfahadhussain" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
 											</li>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
+												<a href="https://twitter.com/sdfahad11" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
 											</li>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/github.png" alt="github"></a>
+												<a href="https://github.com/Syed-Fahad-Hussain" target="_blank"><img src="images/icon/github.png" alt="github"></a>
 											</li>
 										</ul>	
 									</div> <!-- /.text -->
