--- a/index.html
+++ b/index.html
@@ -661,10 +661,10 @@
 							<h2 class="header" style="margin-top: 50px;">Our <span>Partners</span></h2>
 						</div>
 						<div class="partner-slider">
-							<div class="item"><a href="#"><img src="images/logo/p-1.png" alt=""></a></div>
-							<div class="item"><a href="#"><img src="images/logo/p-2.png" alt=""></a></div>
-							<div class="item"><a href="#"><img src="images/logo/p-3.png" alt=""></a></div>
-							<div class="item"><a href="#"><img src="images/logo/p-4.png" alt=""></a></div>
+							<div class="item"><a href="https://numio.io" target="_blank"><img src="images/logo/p-1.png" alt="Numio"></a></div>
+							<div class="item"><a href="#" target="_blank"><img src="images/logo/p-2.png" alt="https://bittrex.com"></a></div>
+							<div class="item"><a href="https://crevatal.com" target="_blank"><img src="images/logo/p-3.png" alt=""></a></div>
+							<div class="item"><a href="https://xord.one" target="_blank"><img src="images/logo/p-4.png" alt=""></a></div>
 						</div>
 					</div>
 				</div>
