--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 								<div class="single-block clearfix">
 									<div class="img-block"><img src="images/home/4.png" alt=""></div>
 									<div class="text">
-										<h3 class="name">Fahad Hussain Syed</h3>
+										<h3 class="name">Syed Fahad Hussain</h3>
 										<span>Global Blockchain Director</span>
 										<p>Fahad is the Director of Blockchain. He is charged with the aim of integrating dApp Developers annd building the DAO's blockchain community devs.</p>
 										<ul>
