--- a/index.html
+++ b/index.html
@@ -662,9 +662,9 @@
 						</div>
 						<div class="partner-slider">
 							<div class="item"><a href="https://numio.io" target="_blank"><img src="images/logo/p-1.png" alt="Numio"></a></div>
-							<div class="item"><a href="#" target="_blank"><img src="images/logo/p-2.png" alt="https://bittrex.com"></a></div>
-							<div class="item"><a href="https://crevatal.com" target="_blank"><img src="images/logo/p-3.png" alt=""></a></div>
-							<div class="item"><a href="https://xord.one" target="_blank"><img src="images/logo/p-4.png" alt=""></a></div>
+							<div class="item"><a href="https://bittrex.com" target="_blank"><img src="images/logo/p-2.png" alt="Bittrex"></a></div>
+							<div class="item"><a href="https://crevatal.com" target="_blank"><img src="images/logo/p-3.png" alt="crevatal"></a></div>
+							<div class="item"><a href="https://xord.one" target="_blank"><img src="images/logo/p-4.png" alt="xord"></a></div>
 						</div>
 					</div>
 				</div>
