--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 								<div class="text">
 									<div class="number">04</div>
 									<h2 class="title"><span>Phoenix Storage</span></h2>
-									<p>File storage smart contracts that are universally compatible with any decentralized protocol.</p>
+									<p>File storage smart contracts built on IPFS.</p>
 								</div> <!-- /.text -->
 							</div> <!-- /.col- -->
 							<div class="col-lg-6 order-lg-first img-box"><div><img src="images/shape/2a.png" alt=""></div></div>
@@ -170,7 +170,7 @@
 								<div class="text">
 									<div class="number">05</div>
 									<h2 class="title"><span>Phoenix Tokenization</span></h2>
-									<p>Compliant tokenization of physical assets on chain using Phoenix Identity and Authentication protocols.</p>
+									<p>Compliant tokenization of any physical or digital asset on-chain using Phoenix Identity and Authentication protocols.</p>
 								</div> <!-- /.text -->
 							</div> <!-- /.col- -->
 							<div class="col-lg-6 img-box"><div><img src="images/shape/2c.png" alt=""></div></div>
@@ -306,7 +306,7 @@
 
 							<div class="token-sale-allocation">
 								<div class="theme-title text-center">
-									<h2><span>Phoenix (PHNX)</span> Token Distribution</h2>
+									<h2><span>PhoenixDAO (PHNX)</span> Token Distribution</h2>
 								</div>
 								<div class="row">
 									<div class="col-lg-5 order-lg-last">
@@ -347,7 +347,7 @@
 						<img src="images/shape/12.png" alt="" class="cube-shape-two" data-aos="fade-up" data-aos-duration="1500">
 						<div class="container">
 							<div class="theme-title text-center">
-								<h2>2020 Phoenix DAO <span>Roadmap</span></h2>
+								<h2>2020 PhoenixDAO <span>Roadmap</span></h2>
 								<p>Here is a snippet of what we have been working on, where we are now and where we plan to be!</p>
 							</div>
 
@@ -364,7 +364,10 @@
 											<div class="table-responsive">
 												<table class="table">
 													<tr>
-														<td>Completed</td>
+														<td>
+															<p>This is what it entails</p>
+															Completed
+														</td>
 													</tr>
 												</table>
 											</div>
@@ -594,8 +597,8 @@
 									<div class="img-block"><img src="images/home/1.jpg" alt=""></div>
 									<div class="text">
 										<h3 class="name">Monte Thomas</h3>
-										<span>Global Partnership Director</span>
-										<p>Monte is the director of partnership and responsible for the foundation's growth amonngst others.</p>
+										<span>Global Partnerships Director</span>
+										<p>Monte is the director of partnerships and responsible for the foundation's legal activities and growth</p>
 										<ul>
 											<li>
 												<a href="" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
@@ -613,7 +616,7 @@
 									<div class="text">
 										<h3 class="name">Syed Fahad Hussain</h3>
 										<span>Global Blockchain Director</span>
-										<p>Fahad is the Director of Blockchain. He is charged with the aim of integrating dApp Developers annd building the DAO's blockchain community devs.</p>
+										<p>Fahad is the Director of Blockchain. He is charged with the aim of integrating dApp Developers and building the DAO's blockchain community devs.</p>
 										<ul>
 											<li>
 												<a href="https://www.linkedin.com/in/syedfahadhussain" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
