--- a/index.html
+++ b/index.html
@@ -205,38 +205,23 @@
 						
 
 						<div class="row">
-							<div class="col-md-4 col-xs-12">
+							<div class="col-md-12 col-xs-12">
 								<div class="single-feature">
-									<p><span class="numbers">1.</span> All spending will be voted on by the DAO and every PHNX spent posted on our running budget page. 
-									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature border-fix">
-									<p><span class="numbers">2.</span> The Phoenix DAO does not rely on donations; it is self sustaining through the Phoenix dApp Store.
-									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
-									<p><span class="numbers">3.</span> By participating in governance, you can earn PHNX, ETH, and even DAI.
-									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
-									<p><span class="numbers">4.</span> Open framework for participation, and enables anyone around the globe to push the ecosystem forward.
-									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
-									<p><span class="numbers">5.</span> By staking your PHNX into the contracts, you are able to earn rewards.
-									</p>
+									<img src="../phoenix/images/home/7.png" alt="">
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 							<div class="col-md-12 col-xs-12">
 								<div class="single-feature">
+									<p><span class="numbers">1.</span> All spending will be voted on by the DAO and every PHNX spent posted on our running budget page. 
+									</p>
+									<p><span class="numbers">2.</span> The Phoenix DAO does not rely on donations; it is self sustaining through the Phoenix dApp Store.
+									</p>
+									<p><span class="numbers">3.</span> By participating in governance, you can earn PHNX, ETH, and even DAI.
+									</p>
+									<p><span class="numbers">4.</span> Open framework for participation, and enables anyone around the globe to push the ecosystem forward.
+									</p>
+									<p><span class="numbers">5.</span> By staking your PHNX into the contracts, you are able to earn rewards.
+									</p>
 									<p style="text-align: center; color: #000;" class="border">Learn more about what makes our DAO unique <a href="#" class="here">here</a> 
 									</p>
 								</div> <!-- /.single-feature -->
@@ -256,37 +241,24 @@
 						<div class="theme-title">
 							<h2 class="header">Phoenix <span>dApp</span> Store								 </h2>
 						</div>
-						
-
 						<div class="row">
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
+							<div class="col-sm-6">
+								<div class="single-feature col-xs-12">
 									<p><span class="numbers">1.</span> Decentralized hub for digital identity based dApps.
 									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature border-fix">
-									<p><span class="numbers">2.</span> Events Marketplace allows event attendees to secure tickets with crypto and verify authenticity of peer to peer ticket transfers via Phoenix Identity protocol.
+									<p><span class="numbers">2.</span>Events Marketplace allows event attendees to secure tickets with crypto and verify authenticity of peer to peer ticket transfers via Phoenix Identity protocol.
 									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
-									<p><span class="numbers">3.</span> A developer can build an application and submit it to the store from anywhere in the world.
+									<p><span class="numbers">3.</span>A developer can build an application and submit it to the store from anywhere in the world.
 									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
 									<p><span class="numbers">4.</span>These dApp proposals will be accepted and voted on by the Phoenix DAO before being built and added to the store.
 									</p>
+									<p><span class="numbers">5.</span>Growing set of developer tools and resources for devs to have all the tools they need to build their first, second or third dApp. 
+									</p>
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
-							<div class="col-md-4 col-xs-12">
-								<div class="single-feature">
-									<p><span class="numbers">5.</span> Growing set of developer tools and resources for devs to have all the tools they need to build their first, second or third dApp. 
-									</p>
+							<div class="col-sm-6">
+								<div class="single-feature col-xs-12">
+									<img src="../phoenix/images/home/8.png" alt="">
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 						</div> <!-- /.row -->
