--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 						<div class="row">
 							<div class="col-md-12 col-xs-12">
 								<div class="single-feature">
-									<img src="../phoenix/images/home/7.png" alt="">
+									<img src="images/home/7.png" alt="">
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 							<div class="col-md-12 col-xs-12">
@@ -258,7 +258,7 @@
 							</div> <!-- /.col- -->
 							<div class="col-sm-6">
 								<div class="single-feature col-xs-12">
-									<img src="../phoenix/images/home/8.png" alt="">
+									<img src="images/home/8.png" alt="">
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 						</div> <!-- /.row -->
