--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 						<div class="round-shape-three"></div>
 						<div class="container">
 							<div class="main-text-wrapper">
-								<h1 class="header-white">Digital Finance <br> Reborn! </h1>
-								<p class="header-white">A revolutionary digital token for future money.</p>
+								<h1 class="header-white">Digital Identity <br> Reborn! </h1>
+								<p class="header-white">Making blockchain solutions available to everyone.</p>
 								<ul class="button-group clearfix">
 									<li><a href="#protocols">Explore</a></li>
 								</ul>
@@ -200,7 +200,7 @@
 				<div class="our-features-one" id="services">
 					<div class="container">
 						<div class="theme-title">
-							<h2 class="header">Setting new standards for <span>DAO</span> </h2>
+							<h2 class="header">Setting new standards for <span>DAOs</span> </h2>
 						</div>
 						
 
@@ -216,13 +216,13 @@
 									</p>
 									<p><span class="numbers">2.</span> The Phoenix DAO does not rely on donations; it is self sustaining through the Phoenix dApp Store.
 									</p>
-									<p><span class="numbers">3.</span> By participating in governance, you can earn PHNX, ETH, and even DAI.
+									<p><span class="numbers">3.</span> By participating in governance, you can earn PHNX.
 									</p>
 									<p><span class="numbers">4.</span> Open framework for participation, and enables anyone around the globe to push the ecosystem forward.
 									</p>
 									<p><span class="numbers">5.</span> By staking your PHNX into the contracts, you are able to earn rewards.
 									</p>
-									<p style="text-align: center; color: #000;" class="border">Learn more about what makes our DAO unique <a href="#" class="here">here</a> 
+									<p style="text-align: center; color: #000;" class="border">Learn more about what makes our DAO unique <a href="https://medium.com/phoenixdao/community-relaunch-hydro-ecosystem-as-phoenixdao-to-bring-true-decentralization-7b5e284ab1a5" target="_blank" class="here">here</a> 
 									</p>
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
@@ -242,7 +242,12 @@
 							<h2 class="header">Phoenix <span>dApp</span> Store		</h2>
 						</div>
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-sm-12">
+								<div class="single-feature col-xs-12">
+									<img src="images/home/8.png" alt="">
+								</div><!-- /.single-feature -->
+							</div> <!-- /.col- -->
+							<div class="col-sm-12">
 								<div class="single-feature col-xs-12">
 									<p><span class="numbers">1.</span> Decentralized hub for digital identity based dApps.
 									</p>
@@ -254,11 +259,6 @@
 									</p>
 									<p><span class="numbers">5.</span>Growing set of developer tools and resources for devs to have all the tools they need to build their first, second or third dApp. 
 									</p>
-								</div> <!-- /.single-feature -->
-							</div> <!-- /.col- -->
-							<div class="col-sm-6">
-								<div class="single-feature col-xs-12">
-									<img src="images/home/8.png" alt="">
 								</div> <!-- /.single-feature -->
 							</div> <!-- /.col- -->
 						</div> <!-- /.row -->
@@ -404,7 +404,7 @@
 											<div class="table-responsive">
 												<table class="table">
 													<tr>
-														<td>Build the DAO</td>
+														<td>Ongoing</td>
 													</tr>
 												</table>
 											</div>
@@ -572,10 +572,10 @@
 										<p>Monte is the director of partnerships and responsible for the foundation's legal activities and growth</p>
 										<ul>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
+												<a href="https://www.linkedin.com/in/montethomaso/" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
 											</li>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
+												<a href="https://twitter.com/ThomasGreat3" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
 											</li>
 										</ul>	
 									</div> <!-- /.text -->
@@ -611,10 +611,10 @@
 										<p>Awosika is a project developer and organiser, he forsees the foundation's initiatives and management</p>
 										<ul>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
+												<a href="https://www.linkedin.com/in/ayodeji-israel-awosika-69924124/" target="_blank"><img src="images/icon/linkedin.png" alt="linkedin"></a>
 											</li>
 											<li>
-												<a href="" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
+												<a href="https://twitter.com/Ebunayo08" target="_blank"><img src="images/icon/twitter.png" alt="twitter"></a>
 											</li>
 										</ul>	
 									</div> <!-- /.text -->
@@ -657,51 +657,35 @@
 								<h2>Get In Touch</h2>
 								<p>Tell us what is on your mind, our team will get back to you within 24 hours</p>
 							</div>
-
-							<form action="#" class="form-validation" autocomplete="off">
+							<iframe name="contactUs" src="https://docs.google.com/forms/u/4/d/e/1FAIpQLSfIyk6XOZzGYkIUSEtZh4WLHf3eOPNZDumBmatFG2U_JlqdeQ/formResponse" style="display : none;"></iframe>
+							<form action="https://docs.google.com/forms/u/4/d/e/1FAIpQLSfIyk6XOZzGYkIUSEtZh4WLHf3eOPNZDumBmatFG2U_JlqdeQ/formResponse" methtod="post" class="form-validation" autocomplete="off" target="contactUs" onsubmit="submitContact()" id="contactForm">
 								<div class="row">
 									<div class="col-md-6">
 										<label>First Name*</label>
-										<input type="text" placeholder="First Name" name="firstName">
+										<input type="text" placeholder="First Name" name="entry.466591509" id="firstname" required>
 									</div>
 									<div class="col-md-6">
 										<label>Last Name*</label>
-										<input type="text" placeholder="Last Name" name="lastName">
+										<input type="text" placeholder="Last Name" name="entry.90323012" required>
 									</div>
 									<div class="col-md-6">
 										<label>Company*</label>
-										<input type="text" placeholder="Company" name="company">
+										<input type="text" placeholder="Company" name="entry.216166275" required>
 									</div>
 									<div class="col-md-6">
 										<label>Email*</label>
-										<input type="text" placeholder="Email" name="email">
+										<input type="text" placeholder="Email" name="entry.89621008" id="email" required>
 									</div>
 									<div class="col-12">
 										<label type="text" name="message">What would you like to talk about?</label>
-										<input type="text" name="message">
+										<input type="text" name="entry.1153318902" required>
+									</div>
+									<div class="col-12 alert alert-success" role="alert" id="alertSuccess" style="display: none;">
+										<p id="alertMessage"></p>
 									</div>
 								</div>
 								<button>Send Message</button>
 							</form>
-
-							<!--Contact Form Validation Markup -->
-							<!-- Contact alert -->
-							<div class="alert-wrapper" id="alert-success">
-								<div id="success">
-									<button class="closeAlert"><i class="fa fa-times" aria-hidden="true"></i></button>
-									<div class="wrapper">
-						               	<p>Your message was sent successfully.</p>
-						             </div>
-						        </div>
-						    </div> <!-- End of .alert_wrapper -->
-						    <div class="alert-wrapper" id="alert-error">
-						        <div id="error">
-						           	<button class="closeAlert"><i class="fa fa-times" aria-hidden="true"></i></button>
-						           	<div class="wrapper">
-						               	<p>Sorry!Something Went Wrong.</p>
-						            </div>
-						        </div>
-						    </div> <!-- End of .alert_wrapper -->
 						</div>
 					</div> <!-- /.overlay -->
 				</div> <!-- /.contact-us-one -->
@@ -721,14 +705,13 @@
 									<div class="col-lg-4 col-sm-6 footer-logo">
 										<div class="logo"><a href="index.html"><img src="images/logo/logo-phnx-4.png" alt="Logo"></a></div>
 										<a href="#" class="email">hello@phoenixdao.io</a>
-										<a href="#" class="mobile">+1-645-xxx-xxx</a>
 									</div> <!-- /.footer-logo -->
 									<div class="col-lg-2 col-sm-6 footer-list">
 										<h4 class="title">Quick Links</h4>
 										<ul>
-											<li><a href="#">Protocols</a></li>
-											<li><a href="#">Distribution</a></li>
-											<li><a href="#">Roadmap</a></li>
+											<li><a href="https://github.com/PhoenixDAO/PhoenixDAO-docs" target="_blank">Protocols</a></li>
+											<li><a href="https://github.com/PhoenixDAO/PhoenixDAO-docs" target="_blank">Distribution</a></li>
+											<li><a href="https://github.com/PhoenixDAO/PhoenixDAO-docs" target="_blank">Roadmap</a></li>
 										</ul>
 									</div> <!-- /.footer-list -->
 									<div class="col-lg-3 col-sm-6 footer-list">
@@ -736,14 +719,14 @@
 										<ul>
 											<li><a href="#">About PhoenixDAO</a></li>
 											<li><a href="#team">Team</a></li>
-											<li><a href="#">Blog</a></li>
+											<li><a href="https://medium.com/phoenixdao/community-relaunch-hydro-ecosystem-as-phoenixdao-to-bring-true-decentralization-7b5e284ab1a5" target="_blank">Blog</a></li>
 										</ul>
 									</div> <!-- /.footer-list -->
 									<div class="col-lg-3 col-sm-6 footer-list">
 										<h4 class="title">Become A Member</h4>
 										<ul>
-											<li><a href="#">Ambassadors</a></li>
-											<li><a href="#">Contributors</a></li>
+											<li><a href="#contact">Ambassadors</a></li>
+											<li><a href="#contact">Contributors</a></li>
 										</ul>
 									</div> <!-- /.footer-list -->
 								</div> <!-- /.row -->
@@ -752,9 +735,10 @@
 							<div class="bottom-footer clearfix">
 								<p class="copyright">&copy; 2020 <a href="#">PhoenixDAO</a> All Rights Reserved</p>
 								<ul>
-									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+									<li><a href="https://github.com/PhoenixDAO" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+									<li><a href="https://twitter.com/phnxdao" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="https://linkedin.com/company/phoenixdao-phnx/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li><a href="https://facebook.com/Phoenix-DAO-110119317367230" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 								</ul>
 							</div> <!-- /.bottom-footer -->
 						</div>
@@ -775,7 +759,23 @@
 
 		<!-- Js File_________________________________ -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    	<!-- jQuery -->
+		<!-- jQuery -->
+		<script>
+
+		function submitContact(e) {
+			let firstname = document.getElementById("firstname").value
+			let email = document.getElementById("email").value
+			document.getElementById("alertMessage").innerHTML = `Hi ${firstname}, your message has been sent successfully!!`
+			document.getElementById("alertSuccess").style.display = "block"
+
+	
+			setTimeout(() => {
+			document.getElementById("contactForm").reset()
+			document.getElementById("alertMessage").innerHTML = ""
+			document.getElementById("alertSuccess").style.display = "none"
+			}, 5000)
+		}
+		</script>
 		<script src="vendor/jquery.2.2.3.min.js"></script>
 		<!-- Popper js -->
 		<script src="vendor/popper.js/popper.min.js"></script>
